release/1.9.1/VERSION.md
# 1.9.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.9.1```   |
| Release Time   | ```2016-03-30T13:43:07+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.9```   |
| sha1   | ```d7aae43ea69d80cc3441bee4179abd791f6534cd```   |
| size   | ```114464```   |
| total size  | ```121580281```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/d7aae43ea69d80cc3441bee4179abd791f6534cd/1.9.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```9bc7f02323d90b9385c1a5dbd47fb144a3fb8835```   |
| size   | ```8699282```   |
| url       | ```https://piston-data.mojang.com/v1/objects/9bc7f02323d90b9385c1a5dbd47fb144a3fb8835/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```bf95d9118d9b4b827f524c878efd275125b56181```   |
| size   | ```8848010```   |
| url       | ```https://piston-data.mojang.com/v1/objects/bf95d9118d9b4b827f524c878efd275125b56181/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |