release/1.9.3/VERSION.md
# 1.9.3

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.9.3```   |
| Release Time   | ```2016-05-10T08:33:35+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.9```   |
| sha1   | ```d7aae43ea69d80cc3441bee4179abd791f6534cd```   |
| size   | ```114464```   |
| total size  | ```121580281```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/d7aae43ea69d80cc3441bee4179abd791f6534cd/1.9.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```b6985b0d3a0520dfb6f17eeb1e8ba58ce9577061```   |
| size   | ```8736082```   |
| url       | ```https://piston-data.mojang.com/v1/objects/b6985b0d3a0520dfb6f17eeb1e8ba58ce9577061/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```8e897b6b6d784f745332644f4d104f7a6e737ccf```   |
| size   | ```9399056```   |
| url       | ```https://piston-data.mojang.com/v1/objects/8e897b6b6d784f745332644f4d104f7a6e737ccf/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |